// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsPage render should not render email and otp settings when not default identity type 1`] = `
<base-page-stub
  class="settings-page"
>
  <template>
    
    Settings
  
  </template>
   
  <v-form-stub
    class="save-settings"
    id="save-settings"
    isformvalid="true"
  >
    <!---->
     
    <v-select-stub
      data-test="select-fiat"
      label="Fiat Currency"
      name="fiatCurrency"
      options="USD,AUD,BRL"
      value="USD"
    />
  </v-form-stub>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <seed-recovery-stub />
   
  <!---->
</base-page-stub>
`;

exports[`SettingsPage render should render the initial state of the component 1`] = `
<base-page-stub
  class="settings-page"
>
  <template>
    
    Settings
  
  </template>
   
  <v-form-stub
    class="save-settings"
    id="save-settings"
    isformvalid="true"
  >
    <v-input-stub
      classname="is-static"
      data-test="input-email"
      help="Contact support if you need to change your email
      address."
      label="Email Address"
      name="input-email"
      readonly=""
      type="email"
    />
     
    <v-select-stub
      data-test="select-fiat"
      label="Fiat Currency"
      name="fiatCurrency"
      options="USD,AUD,BRL"
      value="USD"
    />
  </v-form-stub>
   
  <two-factor-auth-settings-stub />
   
  <change-password-settings-stub />
   
  <password-recovery-stub />
   
  <seed-recovery-stub />
   
  <email-update-stub />
</base-page-stub>
`;
